fixed carousel image overlapping

--- a/client/src/components/carousel/carousel.css
+++ b/client/src/components/carousel/carousel.css
@@ -15,7 +15,7 @@
   }
 
 #image {
-    width: 500px;
+    height: 350px;
     justify-content:center;
 }
 
